apps/web/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    @font-face {
        font-family: "Harlow Solid Italic";
        src: url("assets/fonts/Harlow_Solid_Italic.TTF");
    }
}

@layer components {
    .scrollbar {
        overflow-x: auto;
    }

    .scrollbar::-webkit-scrollbar {
        width: 4px;
        height: 8px;
    }

    .scrollbar::-webkit-scrollbar-track {
        border-radius: 2px;
        border: solid 10px transparent;
    }

    .scrollbar::-webkit-scrollbar-thumb {
        background: rgb(97, 96, 96);
        border-radius: 10px;
    }

    .scrollbar::-webkit-scrollbar-thumb:hover {
        background: #a7a3a3;
    }

    .word-break {
        word-break: break-word;
    }
}

body, main {
    min-height: 100%;
    margin: 0;
    padding: 0;
    background-color: #F4F2E6;
}

#root {
    display: flex;
    flex-flow: column;
    height: 100vh;
}

